# punk-records-research

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
bench/greenfield/: chat_v1_latest.json  e12_dynamic_latest.json  long_session_20.json  long_session_latest.json  regression_latest.json
docs/: E10.1_GPT_PATH.md  E10_ROADMAP.md  E11_ROADMAP.md  E12_LANE_C_BRIDGE.md  E12_ROADMAP.md  E7_RESEARCH.md  E8_ROADMAP.md  E9_ROADMAP.md  KERNEL.md
greenfield/: __init__.py  bench.py  chat_v1.py  cli.py  diag_nl_intent_slot.py  diag_nl_value.py  encoder.py  episodes.py  eval_chat_v1.py  eval_e12_dynamic.py  eval_long_session.py  eval_nl.py  eval_nl_messy.py  eval_open_phrasing.py  eval_overflow.py  eval_renderer_e9b.py  eval_token_savings.py  eval_util.py  evidence.py  kernel.py  learned_encoder.py  log_util.py  nl_gateway.py  nl_turn.py  overflow.py  runner.py  schema.py  session_bridge.py  simulator.py  state_util.py  token_accounting.py  types.py  validate_release.py
greenfield/checkpoints/: encoder_e10a_report.json  encoder_e6_report.json  encoder_e7_report.json  encoder_e9a_report.json  renderer_e3_report.json  renderer_e9b_report.json
greenfield/deploy/: policy.dynamic.json  policy.v0.json  stack.v0.json
greenfield/memory/: __init__.py  dynamic_plant.py  retention.py
greenfield/parser/: nl_script.py  open_phrasing.py  paraphrase_messy.py  paraphrases.py  (+2 more)
hub/: .gitignore  README.md  stack.json
scripts/: publish_hf.py  publish_space_hf.py  release_gate.py  run_publish_hf.ps1
space/: .gitignore  README.md  app.py  demo_util.py  gradio_compat.py
(+66 files in other folders)
